<resources>
    <string name="app_name">ShotTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile">Profile</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="save">Save</string>

    <string name="average_field_goal">Average\nField Goal</string>
    <string name="average_makes">Average\nMakes</string>
    <string name="average_minutes">Average\nMinutes</string>
    <string name="percent">%</string>
    <string name="shots">Shots</string>
    <string name="minutes">Minutes</string>
    <string name="last_average">Last Average</string>
    <string name="total_average">Total Average</string>
    <string name="play">Play</string>

    <string name="all">All</string>
    <string name="seven">7</string>
    <string name="thirty">30</string>
    <string name="three_hundred_sixty_five">365</string>

    <string name="best">Best</string>
    <string name="total_field_goal">Total Field Goal</string>

    <string name="enter_one_of_the_camera_zones_to_begin_the_camera_configuration_process">Enter one of the camera zones to\nbegin the camera configuration\nprocess.</string>
    <string name="walk_into_camera">Walk into Camera Zone</string>
    <string name="find_the_hoop_with_your_camera">Find the Hoop with your Camera</string>
    <string name="point_your_camera_to_the_hoop">Point your camera to the hoop.</string>
    <string name="ready_to_practice">Ready to Practice</string>
    <string name="this_button_will_light_up_ready_for_shot_tracking">This button will ight up, ready for\nshot tracking. Press this button to\nsave your results.</string>
    <string name="action_continue">Continue</string>

</resources>