<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="profileViewModel"
            type="com.example.shottracker_ai.ui.profile.ProfileViewModel" />

        <variable
            name="eventHandler"
            type="com.example.shottracker_ai.ui.profile.EventHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:layout_marginTop="142dp"
            android:onClick="@{() -> eventHandler.changeProfileFromGallery()}"
            app:imageUri="@{profileViewModel.profileImage}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageHappy"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> eventHandler.changeProfileWithDefault(profileViewModel.defaultImageChoices[0])}"
            app:imageUri="@{profileViewModel.defaultImageChoices[0]}"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageSmile"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile"/>

        <ImageView
            android:id="@+id/imageSmile"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> eventHandler.changeProfileWithDefault(profileViewModel.defaultImageChoices[1])}"
            app:imageUri="@{profileViewModel.defaultImageChoices[1]}"
            app:layout_constraintStart_toEndOf="@+id/imageHappy"
            app:layout_constraintEnd_toStartOf="@+id/imageSmirk"
            app:layout_constraintTop_toTopOf="@+id/imageHappy"/>

        <ImageView
            android:id="@+id/imageSmirk"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> eventHandler.changeProfileWithDefault(profileViewModel.defaultImageChoices[2])}"
            app:imageUri="@{profileViewModel.defaultImageChoices[2]}"
            app:layout_constraintStart_toEndOf="@+id/imageSmile"
            app:layout_constraintEnd_toStartOf="@+id/imageNeutral"
            app:layout_constraintTop_toTopOf="@+id/imageHappy"/>

        <ImageView
            android:id="@+id/imageNeutral"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:onClick="@{() -> eventHandler.changeProfileWithDefault(profileViewModel.defaultImageChoices[3])}"
            app:imageUri="@{profileViewModel.defaultImageChoices[3]}"
            app:layout_constraintStart_toEndOf="@+id/imageSmirk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageHappy"/>

        <TextView
            android:id="@+id/labelProfile"
            style="@style/ShotTracker.TextAppearance.Primary.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="103dp"
            android:text="@string/profile"
            android:textSize="36sp"
            app:layout_constraintTop_toBottomOf="@+id/imageHappy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelProfile">

            <EditText
                android:id="@+id/editName"
                style="@style/ShotTracker.TextAppearance.Primary.Regular"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@{profileViewModel.name}"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@null"
                android:textSize="18sp"
                android:hint="@string/what_is_your_name"
                android:gravity="center"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/buttonSave"
            style="@style/ShotTracker.Button"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/save"
            android:backgroundTint="@color/orange_500"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="45dp"
            android:elevation="2dp"
            android:enabled="@{profileViewModel.canSaveProfile}"
            android:onClick="@{() -> eventHandler.saveProfileChanges()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
